--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -18,6 +18,10 @@
 
 % = = = = = Abstract = = = = = %
 
+\begin{abstract}
+\input{sections/abstract}
+\end{abstract}
+
 % = = = = = Main Body = = = = = %
 
 \input{sections/stablecoin}
